--- a/covid/index.html
+++ b/covid/index.html
@@ -4,9 +4,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Covid-19 in Pakistan</title>
-        <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
+        <title>Covid-19 stats</title>
         <link rel="icon" type="image/png" href="icon.png">
     </head>
     <center>
