--- a/covid/index.html
+++ b/covid/index.html
@@ -5,6 +5,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Covid-19 stats</title>
+        <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="icon.png">
     </head>
     <center>
